--- a/overview/install.html
+++ b/overview/install.html
@@ -1,4 +1,4 @@
-<template $exist="language == 'zh-cn'">
+<template *exist="language == 'zhCN'">
   <h2>${ $['overview.install'] }</h2>
   <div class="content">
     <h3 class="question">版本信息</h3>
@@ -56,8 +56,8 @@
       <div class="margin">1. 通过一个type为“module”的script标签引入dagger.js：
         <div class="code">&lt;script type="module" crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/@peakman/dagger.js@0.9.13/dagger.release.js" defer&gt;&lt;/script&gt;</div>
       </div>
-      <div class="margin">2. 通过一个type为“dagger/configs”的script标签引入<a href="module/introduction">模块配置项</a>，声明渲染页面所需的模块资源。一个最简单的模块配置项是如下的空标签（未定义任何路由和模块）：
-        <div class="code">&lt;script type="dagger/configs"&gt;&lt;/script&gt;</div>
+      <div class="margin">2. 通过一个type为“dagger/modules”的script标签引入<a href="module/introduction">模块配置项</a>，声明渲染页面所需的模块资源。一个最简单的模块配置项是如下的空标签（未定义任何路由和模块）：
+        <div class="code">&lt;script type="dagger/modules"&gt;&lt;/script&gt;</div>
         <div>关于配置项的更多详细内容将在后续的<a href="module/introduction">模块</a>和<a href="router/introduction">路由</a>章节中进行讲解。</div>
       </div>
       <div class="margin">3. 插入一个style标签（可选），用于隐藏尚未渲染完成的html内容：
@@ -74,7 +74,7 @@
     </div>
   </div>
 </template>
-<template $exist="language == 'en-us'">
+<template *exist="language == 'enUS'">
   <div class="section">
     <h2>${ $['overview.version'] }</h2>
     <span>${ $['overview.version.content'] }</span>
@@ -82,26 +82,26 @@
     <span>${ $.period || '.' }</span>
   </div>
   <div class="section">
-    <div $html="$['overview.version.files']"></div>
+    <div *html="$['overview.version.files']"></div>
     1. 
     <a class="bold margin" target="_blank" href="https://cdn.jsdelivr.net/npm/@peakman/dagger.js@0.9.13/dagger.js">dagger.js</a>
-    <div style="display: inline-block;" $html="$['dagger.js']"></div>
+    <div style="display: inline-block;" *html="$['dagger.js']"></div>
     <br/>
     2. 
     <a class="bold margin" target="_blank" href="https://cdn.jsdelivr.net/npm/@peakman/dagger.js@0.9.13/dagger.min.js">dagger.min.js</a>
-    <div style="display: inline-block;" $html="$['dagger.min.js']"></div>
+    <div style="display: inline-block;" *html="$['dagger.min.js']"></div>
     <br/>
     3. 
     <a class="bold margin" target="_blank" href="https://cdn.jsdelivr.net/npm/@peakman/dagger.js@0.9.13/dagger.release.js">dagger.release.js</a>
     
-    <div style="display: inline-block;" $html="$['dagger.release.js']"></div>
+    <div style="display: inline-block;" *html="$['dagger.release.js']"></div>
     <br/>
     4. 
     <a class="bold margin" target="_blank" href="https://cdn.jsdelivr.net/npm/@peakman/dagger.js@0.9.13/dagger.release.min.js">dagger.release.min.js</a>
-    <div style="display: inline-block;" $html="$['dagger.release.min.js']"></div>
+    <div style="display: inline-block;" *html="$['dagger.release.min.js']"></div>
   </div>
   <div class="section">
     <h3>${ $.compatibility }</h3>
-    <div $html="$['compatibility.content']"></div>
+    <div *html="$['compatibility.content']"></div>
   </div>
 </template>
