--- a/directive/boolean.html
+++ b/directive/boolean.html
@@ -1,6 +1,6 @@
 <h2>${ $['directive.boolean'] }</h2>
 <div class="content">
-  <template $exist="language == 'zh-cn'">
+  <template *exist="language == 'zhCN'">
     <h3 class="question">布尔指令的作用</h3>
     <div class="answer">布尔指令用于对宿主元素的<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/HTML/Attributes#%E5%B8%83%E5%B0%94%E5%80%BC%E5%B1%9E%E6%80%A7">布尔值属性</a>进行绑定。</div>
     <h3 class="question">布尔指令表达式的执行结果</h3>
@@ -17,10 +17,10 @@
       </div>
     </div>
   </template>
-  <template $exist="language == 'en-us'">
-    <template $each="$['directive.boolean.sections']">
+  <template *exist="language == 'enUS'">
+    <template *each="$['directive.boolean.sections']">
       <h3 class="question">${ item.question }</h3>
-      <div class="answer" $html="item.answer"></div>
+      <div class="answer" *html="item.answer"></div>
     </template>
   </template>
 </div>
