--- a/directive/each.html
+++ b/directive/each.html
@@ -1,17 +1,17 @@
 <h2>${ $['directive.each'] }</h2>
   <div class="content">
-    <template $exist="language == 'zh-cn'">
-      <h3 class="question">$each指令的作用</h3>
-      <div class="answer">$each指令用于循环渲染具有相同视图模板的数组，对象，或者其他<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Iteration_protocols">可迭代变量</a>。</div>
-      <h3 class="question">$each指令的触发顺序</h3>
-      <div class="answer">$each指令将先于其宿主元素上所有的生命周期方法和其他控制指令执行。</div>
-      <h3 class="question">$each指令表达式的执行结果</h3>
+    <template *exist="language == 'zhCN'">
+      <h3 class="question">*each指令的作用</h3>
+      <div class="answer">*each指令用于循环渲染具有相同视图模板的数组，对象，或者其他<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Iteration_protocols">可迭代变量</a>。</div>
+      <h3 class="question">*each指令的触发顺序</h3>
+      <div class="answer">*each指令将先于其宿主元素上所有的生命周期方法和其他控制指令执行。</div>
+      <h3 class="question">*each指令表达式的执行结果</h3>
       <div class="answer">
-        <div>当$each指令的计算结果是一个可迭代数据结构时，框架会以其宿主元素（包含其子级元素）作为模板循环渲染出多个元素实例，并基于循环体内容为每个元素实例创建一个新的切片作用域变量。这个切片作用域变量下定义了如下几个字段：</div>
+        <div>当*each指令的计算结果是一个可迭代数据结构时，框架会以其宿主元素（包含其子级元素）作为模板循环渲染出多个元素实例，并基于循环体内容为每个元素实例创建一个新的切片作用域变量。这个切片作用域变量下定义了如下几个字段：</div>
         <div class="margin">“item”，任意类型，指向循环体子项数据内容。</div>
         <div class="margin">“index”，整数类型，指向子项数据在循环体中的索引。</div>
         <div class="margin">“key”，字符串类型，指向子项数据在父级数据中的字段名。</div>
-        <div>下面我们来看一个计算结果为数组的$each指令示例：
+        <div>下面我们来看一个计算结果为数组的*each指令示例：
           <iframe height="300" style="width: 100%;" scrolling="no" title="Untitled" src="https://codepen.io/dagger8224/embed/NWydpzg?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
             See the Pen <a href="https://codepen.io/dagger8224/pen/NWydpzg">
             Untitled</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
@@ -19,8 +19,8 @@
           </iframe>
         </div>
       </div>
-      <h3 class="question">$each指令的预定义修饰符</h3>
-      <div class="answer">$each指令支持如下预定义修饰符：
+      <h3 class="question">*each指令的预定义修饰符</h3>
+      <div class="answer">*each指令支持如下预定义修饰符：
         <div class="margin">1. “root”，布尔类型。root为true代表当前指令创建的切片作用域直接继承自<a href="directive/scope">根作用域</a>而非其父级作用域。</div>
         <div class="margin">2. 上文中提到的切片作用域下的“item”、“index”和“key”三个字段都可以使用同名修饰符重新命名以避免命名冲突。我们看下面的例子：
           <iframe height="300" style="width: 100%;" scrolling="no" title="Untitled" src="https://codepen.io/dagger8224/embed/LYQxyOZ?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
@@ -30,8 +30,8 @@
           </iframe>
         </div>
       </div>
-      <h3 class="question">$each嵌套使用示例</h3>
-      <div class="answer">不同宿主元素上声明的$each指令可以嵌套使用，下面是一个例子：
+      <h3 class="question">*each嵌套使用示例</h3>
+      <div class="answer">不同宿主元素上声明的*each指令可以嵌套使用，下面是一个例子：
         <iframe height="300" style="width: 100%;" scrolling="no" title="Untitled" src="https://codepen.io/dagger8224/embed/ZErLJxo?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
           See the Pen <a href="https://codepen.io/dagger8224/pen/ZErLJxo">
           Untitled</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
@@ -39,10 +39,10 @@
         </iframe>
       </div>
     </template>
-    <template $exist="language == 'en-us'">
-      <template $each="$['directive.each.sections']">
+    <template *exist="language == 'enUS'">
+      <template *each="$['directive.each.sections']">
         <h3 class="question">${ item.question }</h3>
-        <div class="answer" $html="item.answer"></div>
+        <div class="answer" *html="item.answer"></div>
       </template>
   </template>
 </div>
