--- a/directive/result.html
+++ b/directive/result.html
@@ -1,11 +1,11 @@
 <h2>${ $['directive.result'] }</h2>
 <div class="content">
-  <template $exist="language == 'zh-cn'">
-    <h3 class="question">$result指令的作用</h3>
-    <div class="answer">$result指令用于绑定本地文件的上传状态和结果，适用于类型为file的input元素。</div>
-    <h3 class="question">$result指令的执行结果</h3>
+  <template *exist="language == 'zhCN'">
+    <h3 class="question">*result指令的作用</h3>
+    <div class="answer">*result指令用于绑定本地文件的上传状态和结果，适用于类型为file的input元素。</div>
+    <h3 class="question">*result指令的执行结果</h3>
     <div class="answer">
-        <div>对于单选文件选择元素来说，$result的执行结果是一个包含如下字段的对象：
+        <div>对于单选文件选择元素来说，*result的执行结果是一个包含如下字段的对象：
             <div class="margin">1. “file”，<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/API/File">File</a>类型。指向用户当前选择的文件对象。</div>
             <div class="margin">2. “content”，字符串或者ArrayBuffer类型。指向从当前文件对象读取出的内容。</div>
             <div class="margin">3. “state”，字符串类型。指向当前文件的读取状态，包括“initialized”（初始化），“loading”（加载中），“loaded”（加载完成），“error”（加载错误），“abort”（取消加载）等几种。</div>
@@ -18,20 +18,20 @@
                 on <a href="https://codepen.io">CodePen</a>.
               </iframe>
         </div>
-        <div>对于多文件选择元素来说，$result的执行结果是一个对象数组，每个数组项对象的结构与单文件选择的情况一致。</div>
+        <div>对于多文件选择元素来说，*result的执行结果是一个对象数组，每个数组项对象的结构与单文件选择的情况一致。</div>
     </div>
-    <h3 class="question">$result指令的预定义修饰符</h3>
-    <div class="answer">$result指令支持如下几个预定义修饰符：
+    <h3 class="question">*result指令的预定义修饰符</h3>
+    <div class="answer">*result指令支持如下几个预定义修饰符：
         <div class="margin">1. “buffer”，布尔类型。值为true指明当前文件应该采用<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/API/FileReader/readAsArrayBuffer">ArrayBuffer</a>方式加载。</div>
         <div class="margin">2. “data”，布尔类型。值为true指明当前文件应该采用<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/API/FileReader/readAsDataURL">DataURL</a>方式加载。</div>
         <div class="margin">3. “encoding”，字符串类型。用于指明当采用<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/API/FileReader/readAsText">文本方式</a>（默认）读取当前文件时需要使用的编码类型（默认为“utf-8”）。</div>
         我们来看示例：
-        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] $result directive (decorators)" src="https://codepen.io/dagger8224/embed/bGLrqyb?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] *result directive (decorators)" src="https://codepen.io/dagger8224/embed/bGLrqyb?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
             See the Pen <a href="https://codepen.io/dagger8224/pen/bGLrqyb">
-            [dagger-demo] $result directive (decorators)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+            [dagger-demo] *result directive (decorators)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
             on <a href="https://codepen.io">CodePen</a>.
           </iframe>
     </div>
   </template>
-  <template $exist="language == 'en-us'"></template>
+  <template *exist="language == 'enUS'"></template>
 </div>
