--- a/directive/sentry.html
+++ b/directive/sentry.html
@@ -1,19 +1,19 @@
 <h2>${ $['directive.sentry'] }</h2>
 <div class="content">
-  <template $exist="language == 'zh-cn'">
+  <template *exist="language == 'zhCN'">
     <h3 class="question">+sentry指令的作用</h3>
     <div class="answer">
       <div>“+sentry”指令在即将发生页面内路由跳转时由框架触发调用。</div>
       <div>当前页面中任意一个“+sentry”指令表达式的计算结果为true或等效值时，路由跳转过程将终止。您可以使用“+sentry”指令作为路由守卫。</div>
-      <div>“+sentry”指令表达式中可以使用指向目标<a href="router/introduction">路由</a>对象的上下文参数“$nextRouter”。</div>
+      <div>“+sentry”指令表达式中可以使用指向目标<a href="router/introduction">路由</a>对象的上下文参数“$nextRoute”。</div>
     </div>
     <h3 class="question">+sentry指令示例</h3>
     <div class="answer">“+sentry”指令示例将在<a href="router/introduction">路由</a>章节中演示。</div>
   </template>
-  <template $exist="language == 'en-us'">
-    <template $each="$['directive.sentry.sections']">
+  <template *exist="language == 'enUS'">
+    <template *each="$['directive.sentry.sections']">
       <h3 class="question">${ item.question }</h3>
-      <div class="answer" $html="item.answer"></div>
+      <div class="answer" *html="item.answer"></div>
     </template>
   </template>
 </div>
