--- a/module/script.html
+++ b/module/script.html
@@ -1,6 +1,6 @@
 <h2>${ $['module.script'] }</h2>
 <div class="content">
-  <template $exist="language == 'zh-cn'">
+  <template *exist="language == 'zhCN'">
     <h3 class="question">什么是脚本模块</h3>
     <div class="answer">
       <div>脚本模块是一组可复用的javaScript代码片段。</div>
@@ -25,10 +25,10 @@
       </iframe>
     </div>
   </template>
-  <template $exist="language == 'en-us'">
-    <template $each="$['module.script.sections']">
+  <template *exist="language == 'enUS'">
+    <template *each="$['module.script.sections']">
       <h3 class="question">${ item.question }</h3>
-      <div class="answer" $html="item.answer"></div>
+      <div class="answer" *html="item.answer"></div>
     </template>
   </template>
 </div>
