--- a/router/structure.html
+++ b/router/structure.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <script type="dagger/configs">
+  <script type="dagger/modules">
     {
       "template": {
           "uri": "#template",
@@ -16,9 +16,9 @@
   <template id="template">
     <h2>${ $['router.structure'] }</h2>
     <div class="content">
-      <template $each="$['router.structure.sections']">
+      <template *each="$['router.structure.sections']">
         <h3 class="question">${ item.question }</h3>
-        <div class="answer" $html="item.answer"></div>
+        <div class="answer" *html="item.answer"></div>
       </template>
     </div>
   </template>
